Added Page Content placeholder blocks. Started Home App, created templates folder and index.html.

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,5 +39,18 @@
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
+    
+    <!-- Header Block placeholder -->
+    {% block page_header %}
+    {% endblock %}
+
+    <!-- Content Block placeholder -->
+    {% block content %}
+    {% endblock %}
+
+    <!-- JavaScript Post Load placeholder-->
+    {% block postloadjs %}
+    {% endblock %}
+    
   </body>
 </html>
