--- a/templates/base.html
+++ b/templates/base.html
@@ -34,14 +34,40 @@
     <title>Tron Chain Scanner {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                <h2 class="logo-font text-black my-0"><strong>Tron</strong> Chain Scanner</h2>
+            </a>
+        </div>
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <form method="GET" action="">
+                <div class="input-group w-100">
+                    <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                    <div class="input-group-append">
+                        <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                            <span class="icon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                <li class="list-inline-item dropdown"></li>
+                <li class="list-inline-item"></li>
+            </ul>
+        </div>
+    </header>
 
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
     
     <!-- Header Block placeholder -->
-    {% block page_header %}
+    {% block page_header %}        
     {% endblock %}
 
     <!-- Content Block placeholder -->
