Added css class for banner.

--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Scan TRX Chain & shop Merch!</h4>                
+                <h4 class="logo-font my-1">Scan TRON Chain & shop Merch!</h4>                
             </div>            
         </div>
     </header>
