--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,6 +14,7 @@
 {% block content %}
     <!-- Cover base.html background -->
     <div class="overlay"></div>
+    <!-- Display products -->
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
