--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Merchandise</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Merchandise</a>
                     </h4>
                 </div>
             </div>
