--- a/static/css/base.css
+++ b/static/css/base.css
@@ -94,7 +94,7 @@ body {
     }
 }
 
-/* pad the top a bit when navbar is collapsed on mobile */
+/* pad the top when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
