--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -24,6 +24,7 @@
 
         <div class="row">
             <div class="col">
+                {{ bag_items }}
                 {% if bag_items %}
                     <div class="table-responsive rounded"></div>
                 {% else %}
