--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,11 @@
     </header>
 
     {% if messages %}
-        <div class="message-container"></div>
+        <div class="message-container">
+            {% for message in messages %}                
+                {% include 'includes/toasts/toast_success.html' %}                    
+            {% endfor %}
+        </div>
     {% endif %}
     
     <!-- Header Block placeholder -->
@@ -132,6 +136,9 @@
 
     <!-- JavaScript Post Load placeholder-->
     {% block postloadjs %}
+        <script type="text/javascript">
+            $('.toast').toast('show');
+        </script>
     {% endblock %}
     
   </body>
