--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,11 +1,15 @@
+<!DOCTYPE html>
+
 {% extends "account/base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block inner_content %}
+<hr>
+<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
+<hr>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
