--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -5,8 +7,10 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
+{% block inner_content %}
+    <hr>
+    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
+    <hr>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
