Test bag access 5

--- a/checkout/templates/checkout/confirmation_emails/confirmation_email_body.html
+++ b/checkout/templates/checkout/confirmation_emails/confirmation_email_body.html
@@ -11,7 +11,7 @@
         <p>Order Number: <strong>{{ order.order_number }}</strong></p>
         <p>Order Date: {{ order.date }}</p>
 
-        {% for item in bag_items %}
+        {% for item in purchases %}
             <p>Hello</p>
         {% endfor %}
 
