--- a/user_addresses/templates/addresses/addresses.html
+++ b/user_addresses/templates/addresses/addresses.html
@@ -21,8 +21,20 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">My Addresses</h2>
+                <h2 class="logo-font mb-4">{{ user }}'s Addresses</h2>
                 <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Address Information</p>
+                <form class="mt-3" action="{% url 'addresses' %}" method="POST" id="address-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
             </div>
         </div>
     </div>
