--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -32,7 +32,10 @@
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                <a href="{% url 'addresses' %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
+                    <span class="font-weight-bold">Manage Addresses</span>
+                </a>
+                <button type="submit" class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
             </form>
         </div>
         <div class="col-12 col-lg-6">
