Created basic walletscanner page and linked it in navigation.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,7 +13,7 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">Free Scanner</a>
-                <a href="" class="dropdown-item ">Wallet Scanner</a>
+                <a href="{% url 'walletscanner' %}" class="dropdown-item ">Wallet Scanner</a>
             </div>
         </li>
         <li class="nav-item dropdown">
