--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,7 +21,7 @@
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Wallet Account</a>
+                        <a href="{% url 'walletscanner' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Wallet Account</a>
                     </h4>
                 </div>
                 <div class="my-5">
