--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -12,7 +12,7 @@
                 Scanner
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">Free Scanner</a>
+                <a href="{% url 'freescanner' %}" class="dropdown-item">Free Scanner</a>
                 <a href="{% url 'walletscanner' %}" class="dropdown-item ">Wallet Scanner</a>
             </div>
         </li>
