--- a/freescanner/templates/freescanner/freescanner.html
+++ b/freescanner/templates/freescanner/freescanner.html
@@ -12,10 +12,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <!-- Cover base.html background -->
+    <div class="overlay"></div>
+    
+    <div class="container-fluid">
         <div class="row">
-            <div class="col">
-                <h1>Freescanner</h1>
+            <div class="col text-center mt-3">
+                <h2 class="logo-font">Free Scanner</h2>
+                <hr class="w-50 mb-1">
             </div>
         </div>
     </div>
