--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/8fb5ae9ef1.js" crossorigin="anonymous"></script>
         <!-- STRIPE -->
-        <script src="https://js.stripe.com/v3/"></script>      
+        <script src="https://js.stripe.com/v3/"></script>
+        <!-- IMPORT WALLET - TO GET THE INFORMATION ONLOAD IT NEEDS TO BE IN THE BODY ELEMENT -->
+        <script type="text/javascript" src="{% static 'js/getwallet.js' %}"></script>      
     {% endblock %}
 
     {% block extra_js %}
