--- a/user_addresses/templates/user_addresses/addresses.html
+++ b/user_addresses/templates/user_addresses/addresses.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Address Information</p>
+                <p class="text-muted">Add a new Address</p>
                 <form class="mt-3" action="{% url 'addresses' %}" method="POST" id="address-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
@@ -43,6 +43,7 @@
                                 <th>Full Name</th>
                                 <th>Address: Street</th>
                                 <th>Address: Town or City</th>
+                                <th>Action:</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -56,6 +57,16 @@
                                     </td>
                                     <td>{{ item.additional_street_address1 }}</td>
                                     <td>{{ item.additional_town_or_city }}</td>
+                                    <td>
+                                        <a href="{% url 'edit_address' item.id %}">
+                                            <button>Edit</button>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="{% url 'delete_address' item.id %}">
+                                            <button>Delete</button>
+                                        </a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                         </tbody>
