--- a/user_addresses/templates/user_addresses/addresses.html
+++ b/user_addresses/templates/user_addresses/addresses.html
@@ -31,6 +31,9 @@
                 <form class="mt-3" action="{% url 'addresses' %}" method="POST" id="address-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
+                    <a href="{% url 'profile' %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
+                        <span class="font-weight-bold">Profile</span>
+                    </a>
                     <button class="btn btn-black rounded-0 text-uppercase float-right">Add Address</button>
                 </form>
             </div>
@@ -57,14 +60,14 @@
                                     </td>
                                     <td>{{ item.additional_street_address1 }}</td>
                                     <td>{{ item.additional_town_or_city }}</td>
-                                    <td>
-                                        <a href="{% url 'edit_address' item.id %}">
-                                            <button>Edit</button>
+                                    <td>                                        
+                                        <a href="{% url 'edit_address' item.id %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
+                                            <span class="font-weight-bold">Edit</span>
                                         </a>
                                     </td>
                                     <td>
-                                        <a href="{% url 'delete_address' item.id %}">
-                                            <button>Delete</button>
+                                        <a href="{% url 'delete_address' item.id %}" class="btn btn-black rounded-0 text-uppercase float-right">                    
+                                            <span class="font-weight-bold">Delete</span>
                                         </a>
                                     </td>
                                 </tr>
