--- a/user_addresses/templates/user_addresses/edit_addresses.html
+++ b/user_addresses/templates/user_addresses/edit_addresses.html
@@ -31,6 +31,9 @@
                 <form class="mt-3" action="{% url 'edit_address' address.id %}" method="POST" id="address-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
+                    <a href="{% url 'addresses' %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
+                        <span class="font-weight-bold">Cancel</span>
+                    </a>
                     <button class="btn btn-black rounded-0 text-uppercase float-right">Update Address</button>
                 </form>
             </div>
