Added JS to walletscanner to send a payment via Tronlink.

--- a/walletscanner/templates/walletscanner/walletscanner.html
+++ b/walletscanner/templates/walletscanner/walletscanner.html
@@ -22,7 +22,10 @@
                 <p id="trontest"></p>
                 <hr class="w-50 mb-1">
             </div>
-        </div>        
+        </div>
+        <div class="row">
+            <button type="submit" onclick="payment()">Donate 10 trx!</button>
+        </div>       
     </div>
 {% endblock %}
 
