--- a/freescanner/templates/freescanner/freescanner.html
+++ b/freescanner/templates/freescanner/freescanner.html
@@ -22,5 +22,17 @@
                 <hr class="w-50 mb-1">
             </div>
         </div>
+        <div class="row">
+            <div class="col-6">
+                <button type="submit" id="send-wallet-to-django" class="btn btn-black rounded-0 text-uppercase" onclick="paymentTronlink()">Donate 1 TRX</button>
+            </div>
+            <a href="{% url 'identifiers' %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
+                <span class="font-weight-bold">Manage Contracts</span>
+            </a>
+            <div class="col-6">               
+                
+            </div>
+        </div>
+        <hr class="w-90 mb-1">    
     </div>
 {% endblock %}
