Set default value for select field on Freescanner add page and adjusted color.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,16 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+select,
+select option {
+    color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
