--- a/freescanner/templates/freescanner/add_contracts.html
+++ b/freescanner/templates/freescanner/add_contracts.html
@@ -18,25 +18,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Add or edit contracts</h2>
-                <p id="trontest"></p>
+                <h2 class="logo-font">Add or edit identifiers</h2>
                 <hr class="w-50 mb-1">
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Add a contract</p>
+                <p class="text-muted">Add an identifier</p>
                 <form class="mt-3" action="{% url 'identifiers' %}" method="POST" id="identifiers-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <a href="{% url 'freescanner' %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
                         <span class="font-weight-bold">Back to Free scanner</span>
                     </a>
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Add Contract</button>
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Add Identifier</button>
                 </form>
             </div>        
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Additional Wallets</p>
+                <p class="text-muted">Defined Identifiers</p>
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
@@ -55,10 +54,10 @@
                                     </td>
                                     <td>{{ item.identifier_type }}</td>
                                     <td class="float-right">                                        
-                                        <a href="{% url 'edit_address' item.id %}" class="btn btn-outline-black rounded-0 text-uppercase">                    
+                                        <a href="{% url 'edit_contracts' item.id %}" class="btn btn-outline-black rounded-0 text-uppercase">                    
                                             <span class="font-weight-bold">Edit</span>
                                         </a>
-                                        <a href="{% url 'delete_address' item.id %}" class="btn btn-black rounded-0 text-uppercase float-right">                    
+                                        <a href="#" class="btn btn-black rounded-0 text-uppercase float-right">                    
                                             <span class="font-weight-bold">Delete</span>
                                         </a>
                                     </td>
