--- a/freescanner/templates/freescanner/freescanner.html
+++ b/freescanner/templates/freescanner/freescanner.html
@@ -27,7 +27,7 @@
                 <button type="submit" id="send-wallet-to-django" class="btn btn-black rounded-0 text-uppercase" onclick="paymentTronlink()">Donate 1 TRX</button>
             </div>
             <a href="{% url 'identifiers' %}" class="btn btn-outline-black rounded-0 text-uppercase float-left">                    
-                <span class="font-weight-bold">Manage Contracts</span>
+                <span class="font-weight-bold">Manage Identifiers</span>
             </a>
             <div class="col-6">               
                 
