Fixed Tronlink connection to donate 1 TRX without trying to create a wallet.

--- a/freescanner/templates/freescanner/freescanner.html
+++ b/freescanner/templates/freescanner/freescanner.html
@@ -39,7 +39,7 @@
                 <table class="table table-sm table-borderless">
                     <thead>
                         <tr>
-                            <th>Address:</th>
+                            <th>TRX Wallet:</th>
                             <th>Balance:</th>
                         </tr>
                     </thead>
