--- a/static/css/base.css
+++ b/static/css/base.css
@@ -338,10 +338,14 @@ input[name='q']::placeholder {
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
+
+    .col-lg-6 {
+        padding-top: 20px;
+    }
 }
 
 @media (max-width: 980px) {
-    /* pad the top when navbar is collapsed on mobile */
+    /* display different background image on smaller screen sizes */
     body {
         background: url('/media/icon-red-cropped300.png') no-repeat center center fixed;
         background-size: contain;
